--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,16 +1,16 @@
 # your domain
-domain: example.com
+domain: by-mini.herokuapp.com
 
 # database url
 database_url: ""
 
 # cloudflare api
-cf_email: ""
-cf_key: ""
+cf_email: "lskonbar@gmail.com"
+cf_key: "fYl1JNpSdnLONGNpfCWb6mjsN_Rrg1vJKFXkP7Og"
 
 # source definition file
 source-files:
   # use local file
   - source.yaml
   # use web file
-  - https://example.com/source.yaml
+  - https://by-mini.herokuapp.com/source.yaml
