--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,5 @@
 # your domain
-domain: by-mini.herokuapp.com
+domain: example.com
 
 # database url
 database_url: ""
@@ -13,4 +13,4 @@ source-files:
   # use local file
   - source.yaml
   # use web file
-  - https://github.com/lsgod/proxypool/blob/master/config/source.yaml
+  - https://example.com/source.yaml
